# survive2020

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
assets/: display_config.ron
assets/sprites/: ability_frame_background.ron  big_swatter.ron  bucket.ron  bug_spray_ability.ron  covid_player.ron  covid_title.ron  droplet.ron  fire.ron  health_pack.ron  hive_trap.ron  hornets_background.ron  hornets_title.ron  logo.ron  progress_bar.ron  super_spreader.ron  tapped_ability_frame.ron  wildfires_title.ron
src/: audio.rs  lib.rs  main.rs
src/resources/: abilities.rs  high_scores.rs  mod.rs
src/states/: covid.rs  hornets.rs  main_menu.rs  mod.rs  wildfires.rs
src/systems/: ability_bar.rs  covid.rs  hornets.rs  mod.rs  wildfires.rs
