[package]
name = "survive2020"
version = "0.1.0"
authors = ["t11s <greenfeatherhelp@gmail.com>"]
edition = "2018"

[dependencies]
amethyst = "0.15.0"
log = { version = "0.4.8", features = ["serde"] }

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
