[package]
name = "survive2020"
version = "0.1.0"
authors = ["t11s <greenfeatherhelp@gmail.com>"]
edition = "2018"

[dependencies.amethyst]
version = "0.15"
git = "https://github.com/amethyst/amethyst"
rev = "2535a065fb34234a1e5b74c4da5717d1dcdce6ca"
default-features = false
features = ["metal", "audio"]

[features]
default = ["metal"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
